Modal Dialog: added media queries to fix modal dialog on mobile

--- a/infl-styles/_modal_dialog.scss
+++ b/infl-styles/_modal_dialog.scss
@@ -137,3 +137,14 @@
     }
   }
 }
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 600px) {
+  .pt-modal-dialog {
+    &.large,
+    &.medium,
+    &.small  {
+      width: 95%;
+    }
+  }
+}
